--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,125 @@
-body {
-  margin: 0;
+@import "normilize";
+@import "utils/mixins";
+@import "utils/vars";
+@import "blocks/header";
+@import "blocks/container";
+@import "blocks/logo";
+@import "blocks/button";
+@import "blocks/top-actions";
+@import "blocks/menu";
+@import "blocks/products";
+@import "blocks/card";
+@import "blocks/about-us";
+@import "blocks/blog";
+@import "blocks/footer";
+@import "blocks/footer-menu";
+@import "blocks/contact-us";
+@import "blocks/social";
+
+.page {
+  background-color: $c-pink-light;
+  scroll-behavior: smooth;
+
+  @include on-tablet {
+    background-image: url(images/Crumbs.png);
+    background-repeat: no-repeat;
+    background-position: center top 3200px;
+    background-size: 530px;
+  }
+
+  @include on-desktop {
+    background-image: url(images/Crumbs.png);
+    background-repeat: no-repeat;
+    background-position: center bottom 670px;
+    background-size: 600px;
+  }
+
+  @include on-desktop-plus {
+    background-image: url(images/Crumbs.png);
+    background-repeat: no-repeat;
+    background-position: center bottom 670px;
+    background-size: 600px;
+  }
+
+  &__body {
+    margin: 0;
+    font-family: Inter, sans-serif;
+  }
+
+  &__menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+
+    transform: translateX(-100%);
+
+    &:target {
+      transform: translateX(0);
+    }
+  }
+
+  &__section-products {
+    margin-bottom: 72px;
+
+    @include on-tablet {
+      margin-bottom: 152px;
+    }
+
+    @include on-desktop {
+      margin-bottom: 178px;
+    }
+
+    @include on-desktop-plus {
+      margin-bottom: 178px;
+    }
+  }
+
+  &__section-about-us {
+    margin-bottom: 64px;
+
+    @include on-tablet {
+      margin-bottom: 72px;
+    }
+
+    @include on-desktop {
+      margin-bottom: 144px;
+    }
+
+    @include on-desktop-plus {
+      margin-bottom: 144px;
+    }
+  }
+
+  &__section-blog {
+    margin-bottom: 72px;
+
+    @include on-tablet {
+      margin-bottom: 152px;
+    }
+
+    @include on-desktop {
+      margin-bottom: 350px;
+    }
+
+    @include on-desktop-plus {
+      margin-bottom: 350px;
+    }
+  }
+
+  &__header {
+    margin-bottom: 104px;
+
+    @include on-tablet {
+      margin-bottom: 228px;
+    }
+
+    @include on-desktop {
+      margin-bottom: 150px;
+    }
+
+    @include on-desktop-plus {
+      margin-bottom: 150px;
+    }
+  }
 }
